# regpredict

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/regpredict/: finalized_model.h5
src/regpredict.egg-info/: PKG-INFO
