[metadata]
name = regpredictor
version = 0.0.1
author = Nicolus Rotich
author_email = nicholas.rotich@gmail.com
description = A package for predicting buy and sell signals based on EVX algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moinonin/regpredictor
project_urls =
    Bug Tracker = https://github.com/pypa/regpredictor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
